<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MetaWatch</string>
    
    <string name="settings_Notifications">Notifications</string>
	<string name="settings_Call">Call</string>
	<string name="settings_Call_desc">Incoming call notification</string>
    <string name="settings_SMS">SMS</string>
    <string name="settings_SMS_desc">New text message notification</string>
	<string name="settings_K9">K9 mail</string>
	<string name="settings_K9_desc">New E-mail notification (K-9 mail)</string>
	<string name="settings_Alarm">Alarm</string>
	<string name="settings_Alarm_desc">Alarm clock alert</string>
	<string name="settings_Music">Music</string>
	<string name="settings_Music_desc">Music track/artist info</string>
    <string name="settings_Timezonechange">Timezone change</string>
    <string name="settings_Timezonechange_desc">Notify that the phone has changed timezones.</string>
    <string name="settings_Batterylow">Low battery</string>
    <string name="settings_Batterylow_desc">Displays a warning when the battery of this device is low.</string>
	<string name="settings_Calendar">Calendar</string>
	<string name="settings_Calendar_desc">Calendar notifications (requires Accessibility in Android settings)</string>
	<string name="settings_OtherNotification">Other Apps</string>
	<string name="settings_OtherNotification_desc">Other notifications (requires Accessibility in Android settings)</string>
    <string name="settings_Device">Device</string>
    <string name="settings_Mac">MAC</string>
    <string name="settings_Mac_desc">Watch Bluetooth MAC address</string>
    <string name="settings_Read_calendar_during_meeting">Read calender during ongoing meetings</string>
    <string name="settings_Read_calendar_during_meeting_desc">Update calendar information while a meeting is ongoing (untick to keep the calendar widget information after the meeting has started)</string>
    <string name="settings_Read_calendar_min_duration_to_meeting_end">Minimum duration to meeting end</string>
    <string name="settings_Read_calendar_min_duration_to_meeting_end_desc">Duration in minutes to the end of an ongoing meeting before calendar read is allowed</string>
    <string name="settings_Display_location_in_small_calendar_widget">Display location in small calendar widget</string>
    <string name="settings_Display_location_in_small_calendar_widget_desc">Displays the location instead of the date in the 24x32 next calendar appointment widget if there is enough space</string>
    <string name="settings_Display_widget_row_separator">Display separator line</string>
    <string name="settings_Display_widget_row_separator_desc">Draws a separator line between widget rows</string>
    <string name="settings_Overlay_weather_text">Overlay text in weather widget</string>
    <string name="settings_Overlay_weather_text_desc">Draws the text (condition and location) over the weather icon</string>
        
    <string-array name="settings_font_size_name"> 
   	<item>Small</item>
   	<item>Medium</item>
   	<item>Large</item>     
	</string-array> 

	<string-array name="settings_font_size_value"> 
	<item>1</item>
   	<item>2</item>
   	<item>3</item>  
	</string-array>
    
	<string-array name="settings_number_buzzes_names">
	<item>No Vibrate</item> 
	<item>One Buzz</item>
   	<item>Two Buzzes</item>
   	<item>Three Buzzes</item>  
   	<item>Four Buzzes</item>  
   	<item>Five Buzzes</item>  
	</string-array>

	<string-array name="settings_number_buzzes_values"> 
	<item>0</item>
	<item>1</item>
   	<item>2</item>
   	<item>3</item>  
   	<item>4</item>  
   	<item>5</item>  
	</string-array>
    
	<string-array name="settings_collect_voltage_names">
	<item>Never</item> 
	<item>1 Minute</item>
	<item>5 Minutes</item>
   	<item>10 Minutes</item>
   	<item>15 Minutes</item>  
   	<item>30 Minutes</item>  
   	<item>60 Minutes</item>  
	</string-array>

	<string-array name="settings_collect_voltage_values"> 
	<item>0</item>
	<item>1</item>
	<item>5</item>
   	<item>10</item>
   	<item>15</item>  
   	<item>30</item>  
   	<item>60</item>  
	</string-array>
        
    <string-array name="settings_media_control_method_names">
    <item>MusicServiceCommand messages (Stock music player)</item>
    <item>Emulate headset buttons (Winamp, and other players)</item>
    </string-array>
    
    <string-array name="settings_media_control_method_values"> 
	<item>0</item>
	<item>1</item>
	<item>2</item>
	</string-array>
	
	<string-array name="settings_weather_provider_names">
	<item>Disabled</item>
    <item>Google Weather</item>
    <item>Weather Underground</item>
    </string-array>
    
    <string-array name="settings_weather_provider_values"> 
	<item>0</item>
	<item>1</item>
	<item>2</item>
	</string-array>
    
    <string name="settings_Digital">Digital Watch</string>
    <string name="settings_Analog">Analog Watch</string>
    <string name="settings_Other">Other</string>
    
    
</resources>
