<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	>
	
    <PreferenceCategory
		android:title="@string/settings_Device"
		>
		<Preference
			android:title="Select Watch"
			android:key="Discovery"
			android:summary="Discover and select watch"
			/>
        
		<EditTextPreference
			android:title="@string/settings_Mac"
			android:key="MAC"
			android:summary="Enter watch MAC address manually"
			android:defaultValue=""
			/>
	</PreferenceCategory>
    
	<PreferenceCategory
		android:title="@string/settings_Notifications"
		>
		<CheckBoxPreference
			android:title="@string/settings_Call"
			android:key="NotifyCall"
			android:summary="@string/settings_Call_desc"
			android:defaultValue="true"
			/>
		<CheckBoxPreference
			android:title="@string/settings_SMS"
			android:key="NotifySMS"
			android:summary="@string/settings_SMS_desc"
			android:defaultValue="true"
			/>
		<ListPreference 
			android:entries="@array/settings_number_buzzes_names" 
			android:entryValues="@array/settings_number_buzzes_values" 
			android:dialogTitle="Number of Buzzes" 
			android:key="settingsSMSNumberBuzzes" 
			android:title="SMS Vibrate Pattern" 
			android:negativeButtonText="Cancel" 
 			android:enabled="true" 
 			android:defaultValue="3"
 			/>
		<CheckBoxPreference
			android:title="Gmail"
			android:key="NotifyGmail"
			android:summary="New E-mail notification (Gmail)"
			android:defaultValue="true"
			/>
		<ListPreference 
			android:entries="@array/settings_number_buzzes_names" 
			android:entryValues="@array/settings_number_buzzes_values" 
			android:dialogTitle="Number of Buzzes" 
			android:key="settingsGmailNumberBuzzes" 
			android:title="Gmail Vibrate Pattern" 
			android:negativeButtonText="Cancel" 
 			android:enabled="true" 
 			android:defaultValue="3"
 			/>			
		<CheckBoxPreference
			android:title="@string/settings_K9"
			android:key="NotifyK9"
			android:summary="@string/settings_K9_desc"
			android:defaultValue="true"
			/>
		<ListPreference 
			android:entries="@array/settings_number_buzzes_names" 
			android:entryValues="@array/settings_number_buzzes_values" 
			android:dialogTitle="Number of Buzzes" 
			android:key="settingsK9NumberBuzzes" 
			android:title="K9 Vibrate Pattern" 
			android:negativeButtonText="Cancel" 
 			android:enabled="true" 
 			android:defaultValue="3"
 			/>			
		<CheckBoxPreference
			android:title="@string/settings_Alarm"
			android:key="NotifyAlarm"
			android:summary="@string/settings_Alarm_desc"
			android:defaultValue="true"
			/>
		<ListPreference 
			android:entries="@array/settings_number_buzzes_names" 
			android:entryValues="@array/settings_number_buzzes_values" 
			android:dialogTitle="Number of Buzzes" 
			android:key="settingsAlarmNumberBuzzes" 
			android:title="Alarm Vibrate Pattern" 
			android:negativeButtonText="Cancel" 
 			android:enabled="true" 
 			android:defaultValue="5"
 			/>			
		<CheckBoxPreference
			android:title="@string/settings_Music"
			android:key="NotifyMusic"
			android:summary="@string/settings_Music_desc"
			android:defaultValue="true"
			/>
		<ListPreference 
			android:entries="@array/settings_number_buzzes_names" 
			android:entryValues="@array/settings_number_buzzes_values" 
			android:dialogTitle="Number of Buzzes" 
			android:key="settingsMusicNumberBuzzes" 
			android:title="Music Vibrate Pattern" 
			android:negativeButtonText="Cancel" 
 			android:enabled="true" 
 			android:defaultValue="1"
 			/>			
		<CheckBoxPreference
			android:title="@string/settings_Calendar"
			android:key="NotifyCalendar"
			android:summary="@string/settings_Calendar_desc"
			android:defaultValue="true"
			/>
		<ListPreference 
			android:entries="@array/settings_number_buzzes_names" 
			android:entryValues="@array/settings_number_buzzes_values" 
			android:dialogTitle="Number of Buzzes" 
			android:key="settingsCalendarNumberBuzzes" 
			android:title="Calendar Vibrate Pattern" 
			android:negativeButtonText="Cancel" 
 			android:enabled="true" 
 			android:defaultValue="3"
 			/>			
		<CheckBoxPreference
			android:title="@string/settings_Batterylow"
			android:key="NotifyBatterylow"
			android:summary="@string/settings_Batterylow_desc"
			android:defaultValue="true"
			/>
		<ListPreference 
			android:entries="@array/settings_number_buzzes_names" 
			android:entryValues="@array/settings_number_buzzes_values" 
			android:dialogTitle="Number of Buzzes" 
			android:key="settingsBatteryNumberBuzzes" 
			android:title="Battery Vibrate Pattern" 
			android:negativeButtonText="Cancel" 
 			android:enabled="true" 
 			android:defaultValue="3"
 			/>			
		<CheckBoxPreference
			android:title="@string/settings_Timezonechange"
			android:key="settingsNotifyTimezoneChange"
			android:summary="@string/settings_Timezonechange_desc"
			android:defaultValue="true"
			/> 			
		<ListPreference 
			android:entries="@array/settings_number_buzzes_names" 
			android:entryValues="@array/settings_number_buzzes_values" 
			android:dialogTitle="Number of Buzzes" 
			android:key="settingsTimezoneNumberBuzzes" 
			android:title="Timezone Vibrate Pattern" 
			android:negativeButtonText="Cancel" 
 			android:enabled="true" 
 			android:defaultValue="2"
 			/>			
		<CheckBoxPreference
			android:title="@string/settings_OtherNotification"
			android:key="NotifyOtherNotification"
			android:summary="@string/settings_OtherNotification_desc"
			android:defaultValue="true"
			/>
		<ListPreference 
			android:entries="@array/settings_number_buzzes_names" 
			android:entryValues="@array/settings_number_buzzes_values" 
			android:dialogTitle="Number of Buzzes" 
			android:key="settingsOtherNotificationNumberBuzzes" 
			android:title="Other Apps Vibrate Pattern" 
			android:negativeButtonText="Cancel" 
 			android:enabled="true" 
 			android:defaultValue="1"
 			/>				
		<Preference
			android:title="Application Blacklist"
			android:key="appBlacklist"
			android:summary="List of applications to ignore notifications from"
			/>

		<CheckBoxPreference
			android:title="Last Notification Replay (Beta)"
			android:key="IdleReplay"
			android:summary="Enable replay of last notification on Idle screen"
			android:defaultValue="false"
			/>
		<ListPreference 
			android:entries="@array/settings_font_size_name" 
			android:entryValues="@array/settings_font_size_value" 
			android:dialogTitle="Font Size" 
			android:key="FontSize" 
			android:title="Font Size" 
			android:negativeButtonText="Cancel" 
 			android:enabled="true" 
 			android:defaultValue="2"
 			/>
		<CheckBoxPreference
			android:title="Center Notification Text"
			android:key="notificationCenter"
			android:summary="Display notification text centered"
			android:defaultValue="false"
			/>
				
	</PreferenceCategory>

		
 	<PreferenceCategory
 		android:title="@string/settings_Analog"
 		>
 		<CheckBoxPreference
			android:title="Pause Before Scrolling"
			android:key="pauseBeforeScrolling"
			android:summary="Pause a few seconds before scrolling long messages on the analog watch"
 			android:defaultValue="false"
 			/>
 	</PreferenceCategory>	
	
	<PreferenceCategory
		android:title="@string/settings_Digital"
		>
		<EditTextPreference
			android:title="Notification Timeout"
			android:key="notificationTimeout"
			android:summary="Default time to wait before returning to idle screen (seconds)"
			android:numeric="integer"
			android:defaultValue="5"
			/>


		<CheckBoxPreference
			android:title="Music Controls (Beta)"
			android:key="IdleMusicControls"
			android:summary="Enable music controls on Idle screen"
			android:defaultValue="false"
			/>
		<CheckBoxPreference
			android:title="Invert LCD"
			android:key="InvertLCD"
			android:summary="Switch black/white bit"
			android:defaultValue="false"
			/>
	</PreferenceCategory>	
	
	<PreferenceCategory
	    android:title="Weather"
	    >

	    <EditTextPreference
			android:title="Weather Location"
			android:key="WeatherCity"
			android:summary="City for weather data"
			android:defaultValue="Dallas,US"
			/>
		<CheckBoxPreference
			android:title="Weather Celsius"
			android:key="WeatherCelsius"
			android:summary="Display temperature in Celsius instead of Fahrenheit"
			android:defaultValue="false"
			/>
		<CheckBoxPreference
			android:title="Weather Geolocation"
			android:key="WeatherGeolocation"
			android:summary="Use Geolocation for weather"
			android:defaultValue="false"
			/>
		<EditTextPreference
			android:title="API Key"
			android:key="WundergroundKey"
			android:summary="API Key for Weather Underground - Required for geolocation"
			android:defaultValue=""
			/>
	    <CheckBoxPreference
			android:title="Disable Weather"
			android:key="DisableWeather"
			android:summary="Disable weather on idle screen"
			android:defaultValue="false"
			/>	    
	    
	</PreferenceCategory>

	<PreferenceCategory
	    android:title="Widgets"
	    >
	   	<CheckBoxPreference
			android:title="Show K-9 Unread Counts"
			android:key="ShowK9Unread"
			android:summary="Display unread mail count from K-9 mail, instead of gmail"
			android:defaultValue="false"
			/>	
	</PreferenceCategory>
	
	<PreferenceCategory
		android:title="@string/settings_Other"
		>
		
		<EditTextPreference
			android:title="Packet Wait"
			android:key="PacketWait"
			android:summary="Time between packet sends (ms)"
			android:numeric="integer"
			android:defaultValue="10"
			/>
		<CheckBoxPreference
			android:title="Hide Notification Icon"
			android:key="HideNotificationIcon"
			android:summary="Hide the ongoing notification icon in the status bar (requires restart)"
			android:defaultValue="false"
			/>
		<CheckBoxPreference
			android:title="Skip SDP lookup"
			android:key="SkipSDP"
			android:summary="Connect directly to port 1"
			android:defaultValue="false"
			/>
		<CheckBoxPreference
			android:title="Log packet details"
			android:key="logPacketDetails"
			android:summary="Log details of Bluetooth packets"
			android:defaultValue="false"
			/>
		<EditTextPreference
			android:title="Test SMS loop interval"
			android:key="SmsLoopInterval"
			android:summary="Time between test SMS notifications (in s)"
			android:numeric="integer"
			android:defaultValue="15"
			/>
		<ListPreference 
			android:entries="@array/settings_collect_voltage_names" 
			android:entryValues="@array/settings_collect_voltage_values" 
			android:dialogTitle="Collection Frequency" 
			android:key="collectWatchVoltage" 
			android:title="Collect Watch Voltage" 
			android:summary="Collect voltage reports from watch and write to SD card (requires restart)"
			android:negativeButtonText="Cancel" 
 			android:enabled="true" 
 			android:defaultValue="0"
            />
 		<CheckBoxPreference
			android:title="Auto Connect on Startup"
			android:key="AutoConnect"
			android:summary="Automatically attempt to connect on app startup."
			android:defaultValue="false"
			/>					
        <CheckBoxPreference
            android:title="Notify Watch on Connect"
            android:key="NotifyWatchOnConnect"
            android:summary="Send a notification to the watch after connecting to it"
            android:defaultValue="false"
            />
			
	</PreferenceCategory>	

	
</PreferenceScreen>



